Improvements to get Pokemon

--- a/DexMasterUI/DexMasterUI.csproj
+++ b/DexMasterUI/DexMasterUI.csproj
@@ -30,4 +30,9 @@
   <ItemGroup>
     <None Include="..\.editorconfig" Link=".editorconfig" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Compile Include="Services\IPokeApiService.cs" />
+    <Compile Include="Services\PokeApiService.cs" />
+  </ItemGroup>
 </Project>
