Big update to semi-remove prompts

--- a/DexMasterUI/DexMasterUI.csproj
+++ b/DexMasterUI/DexMasterUI.csproj
@@ -35,4 +35,8 @@
     <Compile Include="Services\IPokeApiService.cs" />
     <Compile Include="Services\PokeApiService.cs" />
   </ItemGroup>
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="Components\Comments\CommentDisplay.razor" />
+  </ItemGroup>
 </Project>
