--- a/DexMasterLibrary/DexMasterLibrary.csproj
+++ b/DexMasterLibrary/DexMasterLibrary.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="MongoDB.Driver" Version="2.19.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Enums\" />
+  </ItemGroup>
+
 </Project>
