updates to news articles and ability to delete and identify user as admin

--- a/DexMasterUI/DexMasterUI.csproj
+++ b/DexMasterUI/DexMasterUI.csproj
@@ -34,4 +34,8 @@
   <ItemGroup>
     <_ContentIncludedByDefault Remove="Components\Comments\CommentDisplay.razor" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Pages\Items\" />
+  </ItemGroup>
 </Project>
