--- a/DexMasterUI/DexMasterUI.csproj
+++ b/DexMasterUI/DexMasterUI.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
 	<EnvironmentName>Development</EnvironmentName>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <Nullable>disable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>6fd1483c-7ca3-44dc-99b2-ddc051d24445</UserSecretsId>
@@ -53,10 +53,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Bogus" Version="34.0.2" />
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="7.0.11" />
-    <PackageReference Include="MudBlazor" Version="6.10.0" />
-    <PackageReference Include="PokeApiNet" Version="3.0.10" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="8.0.0" />
+    <PackageReference Include="MudBlazor" Version="6.11.1" />
   </ItemGroup>
 
   <ItemGroup>
@@ -69,5 +67,9 @@
 
   <ItemGroup>
     <_ContentIncludedByDefault Remove="Components\Comments\CommentDisplay.razor" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Components\Admin\" />
   </ItemGroup>
 </Project>
