--- a/DexMasterLibrary/DexMasterLibrary.csproj
+++ b/DexMasterLibrary/DexMasterLibrary.csproj
@@ -13,4 +13,10 @@
     <PackageReference Include="PokeApiNet" Version="4.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="Microsoft.Extensions.Hosting.Abstractions">
+      <HintPath>C:\Program Files\dotnet\shared\Microsoft.AspNetCore.App\8.0.0\Microsoft.Extensions.Hosting.Abstractions.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
